<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GreenPlate</string>
    <string name="create_account">Create account</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="back_to_login">Back to login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="input_meal">Input meal</string>
    <string name="recipe">Recipe</string>
    <string name="ingredients">Ingredients</string>
    <string name="shopping_list">Shopping List</string>
    <string name="home_page">HOME PAGE</string>
    <string name="exit_app">Exit App</string>
    <string name="logout">Logout</string>
    <string name="input_meal_page">INPUT MEAL PAGE</string>
    <string name="recipe_page">RECIPE PAGE</string>
    <string name="ingredients_page">INGREDIENTS PAGE</string>
    <string name="shopping_list_page">SHOPPING LIST PAGE</string>
    <string name="personal_info">Personal Info</string>
    <string name="enter_weight">Enter Weight in Lbs</string>
    <string name="enter_gender">Enter Gender</string>
    <string name="enter_height">Enter Height in Inches</string>
    <string name="log">Log</string>
    <string name="enter_meal">Enter Meal</string>
    <string name="enter_calories">Enter Calories</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="enter_ingredient">Enter Ingredient</string>
    <string name="enter_expiration_date">Enter Expiration Date</string>
    <string name="enter_recipe">Enter Recipe</string>
    <string name="enter_serving_size">Enter Serving Size</string>
    <string name="error">Error</string>
    <string name="gender_prompt">Gender</string>
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_calories_vs_time">CaloriesVsTime</string>
    <string name="open_calories_vs_time">Open Calories Vs Time</string>
    <string name="calories_vs_time">Calories vs Time</string>
    <string name="addIngredient">Add Ingredient</string>
    <string name="ingredient_list">Ingredient List</string>
    <string name="ingredients_list">INGREDIENTS LIST</string>
    <string name="add_shopping_item">Add Shopping Item</string>
    <string name="add">ADD</string>
    <string name="buy_items">Buy Items</string>
    <string name="cart_list">Cart List</string>
    <string name="cart">Cart</string>
</resources>