<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.ShoppingList">

    <Button
        android:id="@+id/btn_Home"
        android:layout_width="116dp"
        android:layout_height="94dp"
        android:text="@string/home" />

    <Button
        android:id="@+id/btn_inputmeal"
        android:layout_width="116dp"
        android:layout_height="94dp"
        android:layout_below="@id/btn_Home"
        android:text="@string/input_meal" />

    <Button
        android:id="@+id/Recipe"
        android:layout_width="116dp"
        android:layout_height="94dp"
        android:layout_below="@id/btn_inputmeal"
        android:text="@string/recipe" />

    <Button
        android:id="@+id/Ingredient"
        android:layout_width="wrap_content"
        android:layout_height="102dp"
        android:layout_below="@+id/Recipe"
        android:layout_marginTop="2dp"
        android:text="@string/ingredients" />

    <TextView
        android:layout_width="163dp"
        android:layout_height="33dp"
        android:layout_below="@+id/btn_inputmeal"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="-10dp"
        android:text="@string/shopping_list_page"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Ingredient"
        android:id="@+id/PInformation"
        android:text="@string/personal_info"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="294dp" />

    <Button
        android:id="@+id/Logout"
        android:layout_width="121dp"
        android:layout_height="70dp"
        android:layout_below="@id/PInformation"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="452dp"
        android:layout_marginEnd="296dp"
        android:gravity="center"
        android:text="@string/logout" />

</RelativeLayout>