<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.Ingredients">

    <Button
        android:id="@+id/btn_Home"
        android:layout_width="125dp"
        android:layout_height="80dp"
        android:text="@string/home" />
    <Button
        android:id="@+id/PInformation"
        android:layout_width="125dp"
        android:layout_height="80dp"
        android:layout_below="@id/btn_Home"
        android:text="@string/personal_info" />

    <Button
        android:id="@+id/shoppinglist"
        android:layout_width="125dp"
        android:layout_height="80dp"
        android:layout_below="@id/PInformation"
        android:layout_marginTop="2dp"
        android:text="@string/shopping_list" />

    <Button
        android:id="@+id/addIngredient"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ingredientTitle"
        android:layout_marginStart="160dp"
        android:layout_marginTop="21dp"
        android:text="@string/addIngredient" />

    <RelativeLayout
        android:id="@+id/ingredientForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addIngredient"
        android:visibility="gone"
        >

        <EditText
            android:id="@+id/editTextIngredientName"
            android:layout_width="209dp"
            android:layout_height="57dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/enter_ingredient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextQuantities"
            android:layout_width="209dp"
            android:layout_height="57dp"
            android:layout_below="@+id/editTextIngredientName"
            android:layout_marginStart="160dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/enter_quantity" />

        <EditText
            android:id="@+id/editTextIngredientCalories"
            android:layout_width="209dp"
            android:layout_height="57dp"
            android:layout_below="@+id/editTextQuantities"
            android:layout_marginStart="160dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/enter_calories"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextPoExpire"
            android:layout_width="209dp"
            android:layout_height="57dp"
            android:layout_below="@+id/editTextIngredientCalories"
            android:layout_marginStart="160dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/enter_expiration_date" />

        <Button
            android:id="@+id/btn_Log"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextPoExpire"
            android:layout_marginLeft="200dp"
            android:text="@string/log" />
    </RelativeLayout>

    <Button
        android:id="@+id/Recipe"
        android:layout_width="125dp"
        android:layout_height="80dp"
        android:layout_below="@id/shoppinglist"
        android:layout_marginTop="2dp"
        android:text="@string/recipe" />
    <Button
        android:id="@+id/Logout"
        android:layout_width="125dp"
        android:layout_height="80dp"
        android:layout_below="@id/btn_inputmeal"
        android:gravity="center"
        android:text="@string/logout" />

    <Button
        android:id="@+id/btn_inputmeal"
        android:layout_width="125dp"
        android:layout_height="80dp"
        android:layout_below="@id/Recipe"
        android:text="@string/input_meal"
        android:layout_marginTop="2dp" />

    <TextView
        android:id="@+id/ingredientTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_Home"
        android:layout_centerHorizontal="true"
        android:text="@string/ingredients"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="205dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="#624aa1"
            android:text="@string/ingredients_list"/>

        <ScrollView
            android:id="@+id/scrollIngredients"
            android:layout_width="match_parent"
            android:layout_height="183dp"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:id="@+id/linearIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

            </LinearLayout>

        </ScrollView>
    </LinearLayout>



</RelativeLayout>