<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.Recipe">

    <Button
        android:id="@+id/btn_Home"
        android:layout_width="116dp"
        android:layout_height="94dp"
        android:text="@string/home" />

    <Button
        android:id="@+id/btn_inputmeal"
        android:layout_width="116dp"
        android:layout_height="94dp"
        android:layout_below="@+id/btn_Home"
        android:text="@string/input_meal" />


    <Button
        android:id="@+id/Ingredient"
        android:layout_width="wrap_content"
        android:layout_height="102dp"
        android:layout_below="@+id/btn_inputmeal"
        android:layout_marginTop="2dp"
        android:text="@string/ingredients" />

    <Button
        android:id="@+id/shoppinglist"
        android:layout_width="wrap_content"
        android:layout_height="94dp"
        android:layout_below="@id/Ingredient"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="294dp"
        android:text="@string/shopping_list" />

    <TextView
        android:id="@+id/recipeText"
        android:layout_width="99dp"
        android:layout_height="32dp"
        android:layout_below="@+id/btn_inputmeal"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="-8dp"
        android:text="@string/recipe_page"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shoppinglist"
        android:id="@+id/PInformation"
        android:text="@string/personal_info"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="294dp" />

    <Button
        android:id="@+id/Logout"
        android:layout_width="121dp"
        android:layout_height="70dp"
        android:layout_below="@id/PInformation"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="452dp"
        android:layout_marginEnd="296dp"
        android:gravity="center"
        android:text="@string/logout" />

    <EditText
        android:id="@+id/editTextRecipeName"
        android:layout_width="209dp"
        android:layout_height="57dp"
        android:layout_below="@+id/recipeText"
        android:layout_marginStart="160dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/enter_recipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextIngredReq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextRecipeName"
        android:layout_marginStart="160dp"
        android:layout_marginTop="14dp"
        android:hint="Enter Ingredients for Recipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextQuantRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextIngredReq"
        android:layout_marginStart="160dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="16dp"
        android:hint="Enter Quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_Log"
        android:layout_width="116dp"
        android:layout_height="94dp"
        android:layout_below="@id/editTextQuantRecipe"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="-3dp"
        android:layout_centerHorizontal="true"
        android:text="@string/log" />

</RelativeLayout>